tests/paczka1/small_fuzzy/49128477.err
Error in line 1: loo88UG2tc S49 82,9
Error in line 7: 9vyyxCA S848 84,9
Error in line 10: 9vyyxCA S912 65,4
